<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RechercheActivity">

    <ImageView
        android:id="@+id/titreFoireAuJambon"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:srcCompat="@drawable/baniere_foireaujambondebayonne" />

    <ImageView
        android:id="@+id/logoFoireAuJambon"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:srcCompat="@drawable/logo_foireaujambondebayonne" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_recherche_foire"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nom_exposant"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_specialites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/specialite_exposant"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/zone_exposant"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/b_rechercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_bouton_rechercher"
        android:backgroundTint="@color/colorFoire"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_resultat_recherche"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_resultat"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
