<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titreFoireAuJambon"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:srcCompat="@drawable/baniere_foireaujambondebayonne" />

    <ImageView
        android:id="@+id/logoFoireAuJambon"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:srcCompat="@drawable/logo_foireaujambondebayonne" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/titre_list_exp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_exposants"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/b_actualiser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorFoire"
        android:text="@string/nom_bouton_actu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_nouvel_exp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="Code"/>

    <EditText
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="Nom"/>

    <EditText
        android:id="@+id/et_specialites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="Spécialités"/>

    <EditText
        android:id="@+id/et_anneeCreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="number"
        android:hint="Année de création"/>

    <Button
        android:id="@+id/b_enregistrer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorFoire"
        android:text="@string/nom_bouton_enreg" />
</LinearLayout>